--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "water-compare-app",
-  "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "chart.js": "^4.4.0",
     "next": "13.5.4",
     "react": "18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "chart.js": "^4.4.0",
+    "react-chartjs-2": "^5.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.0",
+    "@types/react": "^18.2.21",
+    "@types/node": "^20.4.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
