--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "18.2.0",
     "chart.js": "^4.4.0",
     "react-chartjs-2": "^5.2.0"
+    "tailwind-merge": "^1.14.0", // версия пример
   },
   "devDependencies": {
     "typescript": "^5.2.0",
