--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "water-compare-app",
+  "name": "water-intelligence-prototype",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.5.4",
+    "next": "13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0"
-    "tailwind-merge": "^1.14.0", // версия пример
+    "recharts": "^2.7.2",
+    "@radix-ui/react-tabs": "^1.0.7",
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.29",
+    "autoprefixer": "^10.4.14",
+    "shadcn-ui": "^1.0.0" 
   },
   "devDependencies": {
-    "typescript": "^5.2.0",
-    "@types/react": "^18.2.21",
-    "@types/node": "^20.4.2"
-  },
-  "engines": {
-    "node": "24.x"
+    "@types/react": "^18.2.6",
+    "@types/node": "^20.4.1",
+    "typescript": "^5.2.2",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.5.6"
   }
 }
