--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "postcss": "^8.4.29",
-    "autoprefixer": "^10.4.14",
-    "shadcn-ui": "^1.0.0" 
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
